Modified the program to accept generic data type